--- a/css/styles.css
+++ b/css/styles.css
@@ -60,9 +60,9 @@ email:focus {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-size: 16px;
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: #404bbf;
 }
 
 .tel:hover,
@@ -86,7 +86,6 @@ email:focus {
 }
 
 .modal-btn {
-  font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -97,6 +96,7 @@ email:focus {
   height: 56px;
   left: 636px;
   top: 428px;
+  font-family: "Roboto", sans-serif;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -185,6 +185,14 @@ email:focus {
   text-decoration: none;
 }
 
+.section-two {
+  position: absolute;
+  width: 1128px;
+  height: 104px;
+  left: 156px;
+  top: 792px;
+}
+
 .studio-sec-one {
   position: absolute;
   width: 1440px;
@@ -201,6 +209,7 @@ email:focus {
   left: 156px;
   top: 792px;
 }
+
 .h-sec-two {
   width: 264px;
   height: 24px;
@@ -211,6 +220,9 @@ email:focus {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
 .p-sec-two {
