--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,21 @@
   text-transform: uppercase;
   color: #4d5ae5;
 }
+
 .logo-design {
   color: #2e2f42;
 }
+
 .logo-design-footer {
   color: #f4f4fd;
+}
+
+.menu-item {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .menu-list {
