--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,7 @@ email:focus {
   height: 24px;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2px;
+  line-height: 1.2;
   text-align: center;
   letter-spacing: 0.02em;
   color: #2e2f42;
