--- a/css/styles.css
+++ b/css/styles.css
@@ -314,17 +314,21 @@ email:focus {
 }
 
 .marc-guerrero {
-  width: 134px;
-  height: 24px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2px;
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 0px 32px;
+  gap: 32px;
+  position: absolute;
+  width: 264px;
+  height: 380px;
+  left: 156px;
+  top: 1780px;
+  background: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .tom-ford {
