--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@
   color: #404bbf;
 }
 
-.adress-item {
+.address-item {
   font-style: normal;
 }
 
@@ -329,6 +329,7 @@ email:focus {
   left: 156px;
   top: 1780px;
   background: #ffffff;
+  background-color: #ffffff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
