--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-:root {
-  --button-color: #4d5ae5;
-  --button-background-color: #F4F4FD;
-}
-
 :root .main-font {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -172,8 +167,8 @@ email:focus {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
-  color: var(--button-color);
-  background-color: var(--button-background-color);
+  color: #4d5ae5;
+  background-color: #F4F4FD;
 }
 
 .port-button:hover,
