--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ email:focus {
 }
 
 .port-button {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -335,18 +336,17 @@ email:focus {
   border-radius: 0px 0px 4px 4px;
 }
 
-.tom-ford {
+.our-team-list {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 0px 32px;
   gap: 32px;
   position: absolute;
+  top: 1780px;
+}
+
+.our-team-li {
+  padding: 0px 0px 32px;
   width: 264px;
   height: 380px;
-  left: 444px;
-  top: 1780px;
   background: #ffffff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -364,7 +364,7 @@ email:focus {
   width: 264px;
   height: 380px;
   left: 732px;
-  top: 1780px;
+  
   background: #ffffff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
