--- a/css/styles.css
+++ b/css/styles.css
@@ -74,29 +74,15 @@
   font-style: normal;
 }
 
-.email {
+.adress-link {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
-.email:hover,
-email:focus {
-  color: #404bbf;
-}
-
-.tel {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #404bbf;
-}
-
-.tel:hover,
-.tel:focus {
+.adress-link:hover,
+.adress-link:focus {
   color: #404bbf;
 }
 
@@ -165,7 +151,7 @@ email:focus {
   letter-spacing: 0.04em;
   cursor: pointer;
   color: #4d5ae5;
-  background-color: #F4F4FD;
+  background-color: #f4f4fd;
 }
 
 .port-button:hover,
@@ -360,7 +346,7 @@ email:focus {
   width: 264px;
   height: 380px;
   left: 732px;
-  
+
   background: #ffffff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
