--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root .main-font {
   font-family: "Roboto", sans-serif;
   color: #434455;
-  --brand-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .logo {
@@ -98,6 +98,7 @@
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  color: #ffffff;
   background-color: #4d5ae5;
   flex: none;
 }
