--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 :root .main-font {
   font-family: "Roboto", sans-serif;
   color: #434455;
+  background-color: var(--brand-color);
   --brand-color: #ffffff;
+
 }
 
 .logo {
